--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,14 @@
         -->
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps"></activity>
+            android:label="@string/title_activity_maps">
+
+        </activity>
+        <activity
+            android:name=".MapsActivity1"
+            android:label="@string/title_activity_maps">
+
+        </activity>
 
         <activity android:name=".MainActivity">
             <intent-filter>
